--- a/part2/high_rating/templates/index.html
+++ b/part2/high_rating/templates/index.html
@@ -9,6 +9,7 @@
       <h2>Название:</h2>
         <ul>
           <li>Ресторан рейтинг</li>
+          <li>Ресторан рейтинг</li>
         </ul>
     </main>
   </body>
