--- a/part2/meal_card/templates/index.html
+++ b/part2/meal_card/templates/index.html
@@ -7,8 +7,8 @@
   <body>
     <main style ="width: 320px; margin: 0 auto;">
       <h2>Название:</h2>
-      <p>Цена: 0р</p>
-      <p>Вес: 0р</p>   
+      <p>Цена: 0</p>
+      <p>Вес: 0</p>   
     </main>
   </body>
 </html>
